k8s-manifests/hierarchical-namespaces/parent-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ss-automative-nds
  labels:
    environment: production
    team: automative
---
apiVersion: v1
kind: Namespace
metadata:
  name: ss-integrations-nds
  labels:
    environment: production
    team: integrations
